versioned_docs/version-6.5.0/api/bbox.mdx
---
title: bbox
---

import * as turf from "turf-6";
import ExampleMap from "@site/src/components/ExampleMap";
import WindowTurfGlobal from "@site/src/components/WindowTurfGlobal";
import BrowserOnly from "@docusaurus/BrowserOnly";

<!-- Expose turf as global var for experimenting in the browser console -->

<BrowserOnly>{() => <WindowTurfGlobal turf={turf} />}</BrowserOnly>

### Description

Takes a set of features, calculates the bbox of all input features, and returns a bounding box.

### Parameters

| Name    | Type                                                         | Description        |
| ------- | ------------------------------------------------------------ | ------------------ |
| geojson | **[GeoJSON](https://tools.ietf.org/html/rfc7946#section-3)** | any GeoJSON object |

### Returns

<ul>
  **[BBox](https://tools.ietf.org/html/rfc7946#section-5)** bbox extent in [minX, minY, maxX, maxY] order

</ul>

### Examples

```javascript
var line = turf.lineString([
  [-74, 40],
  [-78, 42],
  [-82, 35],
]);
var bbox = turf.bbox(line);
var bboxPolygon = turf.bboxPolygon(bbox);
```

export function Map0() {
  "use strict";

  // jsdoc example start
  var line = turf.lineString([
    [-74, 40],
    [-78, 42],
    [-82, 35],
  ]);
  var bbox = turf.bbox(line);
  var bboxPolygon = turf.bboxPolygon(bbox);

  //addToMap
  var addToMap = { line, bboxPolygon };
  // jsdoc example end

  return <ExampleMap addToMap={addToMap} />;
}

<!-- prettier-ignore -->
<BrowserOnly>{() => <Map0 />}</BrowserOnly>

### Installation

```javascript
$ npm install @turf/bbox

import { bbox } from "@turf/bbox";
const result = bbox(...);
```

```javascript
$ npm install @turf/turf

import * as turf from "@turf/turf";
const result = turf.bbox(...);
```
